--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -34,15 +34,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last run:  2020-11-25 12:42:42.327467\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "print(\"Last run: \", datetime.now())\n"
@@ -57,7 +49,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1674  antal poster\n"
+      "1840  antal poster\n"
      ]
     }
    ],
@@ -149,19 +141,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1674 entries, 0 to 1673\n",
+      "RangeIndex: 1840 entries, 0 to 1839\n",
       "Data columns (total 7 columns):\n",
       " #   Column                    Non-Null Count  Dtype \n",
       "---  ------                    --------------  ----- \n",
-      " 0   skblid                    1674 non-null   object\n",
-      " 1   publishedDate             1674 non-null   object\n",
-      " 2   article_author_firstname  1674 non-null   object\n",
-      " 3   article_author_lastname   1674 non-null   object\n",
-      " 4   subtitle_sv               1674 non-null   object\n",
-      " 5   name_lastname             1674 non-null   object\n",
-      " 6   name_firstname            1674 non-null   object\n",
+      " 0   skblid                    1840 non-null   object\n",
+      " 1   publishedDate             1840 non-null   object\n",
+      " 2   article_author_firstname  1840 non-null   object\n",
+      " 3   article_author_lastname   1840 non-null   object\n",
+      " 4   subtitle_sv               1840 non-null   object\n",
+      " 5   name_lastname             1840 non-null   object\n",
+      " 6   name_firstname            1840 non-null   object\n",
       "dtypes: object(7)\n",
-      "memory usage: 91.7+ KB\n"
+      "memory usage: 100.8+ KB\n"
      ]
     }
    ],
@@ -205,13 +197,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1673 entries, 0 to 1672\n",
+      "RangeIndex: 1824 entries, 0 to 1823\n",
       "Data columns (total 1 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
-      " 0   skblid  1673 non-null   object\n",
+      " 0   skblid  1824 non-null   object\n",
       "dtypes: object(1)\n",
-      "memory usage: 13.2+ KB\n"
+      "memory usage: 14.4+ KB\n"
      ]
     }
    ],
@@ -266,13 +258,13 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1673 entries, 0 to 1672\n",
+      "RangeIndex: 1824 entries, 0 to 1823\n",
       "Data columns (total 1 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
-      " 0   skblid  1673 non-null   object\n",
+      " 0   skblid  1824 non-null   object\n",
       "dtypes: object(1)\n",
-      "memory usage: 13.2+ KB\n"
+      "memory usage: 14.4+ KB\n"
      ]
     }
    ],
@@ -313,8 +305,8 @@
     {
      "data": {
       "text/plain": [
-       "both          1673\n",
-       "right_only       1\n",
+       "both          1824\n",
+       "right_only      16\n",
        "left_only        0\n",
        "Name: _merge, dtype: int64"
       ]
@@ -385,14 +377,179 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1673</th>\n",
-       "      <td>SigneHelenaWennberg</td>\n",
-       "      <td>2020-11-25</td>\n",
-       "      <td>Karin</td>\n",
-       "      <td>Gustavsson</td>\n",
-       "      <td>Lärare, rektor, rösträttskvinna</td>\n",
-       "      <td>Wennberg</td>\n",
-       "      <td>/Signe/ Helena</td>\n",
+       "      <th>1824</th>\n",
+       "      <td>AmyReginaNitaHarleman</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Fredrik</td>\n",
+       "      <td>Tersmeden</td>\n",
+       "      <td>Skådespelare, revyartist, sufflör</td>\n",
+       "      <td>Hårleman</td>\n",
+       "      <td>Amy Regina (/Nita/)</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825</th>\n",
+       "      <td>BirgitSunesson</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Birgitta</td>\n",
+       "      <td>Ney</td>\n",
+       "      <td>Journalist, författare</td>\n",
+       "      <td>Sunesson</td>\n",
+       "      <td>/Birgit/ Sofia</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1826</th>\n",
+       "      <td>ElsaSofiaHammarMoeschlin</td>\n",
+       "      <td>2021-02-02</td>\n",
+       "      <td>Christian</td>\n",
+       "      <td>Mehrstam</td>\n",
+       "      <td>Konstnär, författare</td>\n",
+       "      <td>Hammar-Moeschlin</td>\n",
+       "      <td>/Elsa/ Sofia</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1827</th>\n",
+       "      <td>ElsaSvartengren</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Birgitta</td>\n",
+       "      <td>Wistrand</td>\n",
+       "      <td>Politisk journalist, feminist</td>\n",
+       "      <td>Svartengren</td>\n",
+       "      <td>/Elsa/ Maria</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1828</th>\n",
+       "      <td>EmmaAmaliaZorn</td>\n",
+       "      <td>2021-02-02</td>\n",
+       "      <td>Birgitta</td>\n",
+       "      <td>Sandström</td>\n",
+       "      <td>Filantrop, donator, museigrundare</td>\n",
+       "      <td>Zorn</td>\n",
+       "      <td>/Emma/ Amalia</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1829</th>\n",
+       "      <td>ErnaMarianneEriksson</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Caroline</td>\n",
+       "      <td>Bergström</td>\n",
+       "      <td>Redaktör, förlagschef</td>\n",
+       "      <td>Eriksson</td>\n",
+       "      <td>Erna /Marianne/</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1830</th>\n",
+       "      <td>GerdaMargaretaRenberg</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Birgitta</td>\n",
+       "      <td>Flensburg</td>\n",
+       "      <td>Konstnär, poet</td>\n",
+       "      <td>Renberg</td>\n",
+       "      <td>Gerda /Margareta/</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1831</th>\n",
+       "      <td>HedvigAmaliaPosse</td>\n",
+       "      <td>2021-02-02</td>\n",
+       "      <td>Kristina</td>\n",
+       "      <td>Helgesson Kjellin</td>\n",
+       "      <td>Missionär, sjukhusgrundare, psalmförfattare</td>\n",
+       "      <td>Posse</td>\n",
+       "      <td>/Hedvig/ Amalia</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1832</th>\n",
+       "      <td>HildegardDinclau</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>Johanna</td>\n",
+       "      <td>Rosenqvist</td>\n",
+       "      <td>Textilkonstnär, lärare</td>\n",
+       "      <td>Dinclau</td>\n",
+       "      <td>/Hildegard/ Maria</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1833</th>\n",
+       "      <td>IngaStinaGill</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>Jennifer</td>\n",
+       "      <td>Vintkvist</td>\n",
+       "      <td>Skådespelare, dansare</td>\n",
+       "      <td>Gill</td>\n",
+       "      <td>/Inga/ Stina</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1834</th>\n",
+       "      <td>LeaWikstrom</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Robert</td>\n",
+       "      <td>Pohjanen</td>\n",
+       "      <td>Fotograf</td>\n",
+       "      <td>Wikström</td>\n",
+       "      <td>/Lea/ Maria Adina</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1835</th>\n",
+       "      <td>MajaFjstad</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Patrik</td>\n",
+       "      <td>Steorn</td>\n",
+       "      <td>Textilkonstnär, träsnidare</td>\n",
+       "      <td>Fjæstad</td>\n",
+       "      <td>Kerstin Maria (/Maja/)</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1836</th>\n",
+       "      <td>SolveigHedengran</td>\n",
+       "      <td>2021-02-02</td>\n",
+       "      <td>Jennifer</td>\n",
+       "      <td>Vintkvist</td>\n",
+       "      <td>Skådespelare, filmstjärna</td>\n",
+       "      <td>Hedengran</td>\n",
+       "      <td>/Solveig/</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1837</th>\n",
+       "      <td>SonjaLyttkens</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>Sten</td>\n",
+       "      <td>Kaijser</td>\n",
+       "      <td>Matematiker, konstnär, kvinnosakskvinna</td>\n",
+       "      <td>Lyttkens</td>\n",
+       "      <td>/Sonja/ Marie Louise</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1838</th>\n",
+       "      <td>ThyraBratt</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>Birgitta</td>\n",
+       "      <td>Wistrand</td>\n",
+       "      <td>Politiker, kvinnosakskvinna</td>\n",
+       "      <td>Bratt</td>\n",
+       "      <td>/Thyra/ Augusta Elisabeth</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1839</th>\n",
+       "      <td>YrsaStenius</td>\n",
+       "      <td>2021-01-31</td>\n",
+       "      <td>Birgitta</td>\n",
+       "      <td>Wistrand</td>\n",
+       "      <td>Journalist, författare, chefredaktör</td>\n",
+       "      <td>Stenius</td>\n",
+       "      <td>/Yrsa/ Carola</td>\n",
        "      <td>right_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -400,14 +557,59 @@
        "</div>"
       ],
       "text/plain": [
-       "                   skblid publishedDate article_author_firstname  \\\n",
-       "1673  SigneHelenaWennberg    2020-11-25                    Karin   \n",
+       "                        skblid publishedDate article_author_firstname  \\\n",
+       "1824     AmyReginaNitaHarleman    2021-01-31                  Fredrik   \n",
+       "1825            BirgitSunesson    2021-01-31                 Birgitta   \n",
+       "1826  ElsaSofiaHammarMoeschlin    2021-02-02                Christian   \n",
+       "1827           ElsaSvartengren    2021-01-31                 Birgitta   \n",
+       "1828            EmmaAmaliaZorn    2021-02-02                 Birgitta   \n",
+       "1829      ErnaMarianneEriksson    2021-01-31                 Caroline   \n",
+       "1830     GerdaMargaretaRenberg    2021-01-31                 Birgitta   \n",
+       "1831         HedvigAmaliaPosse    2021-02-02                 Kristina   \n",
+       "1832          HildegardDinclau    2021-02-01                  Johanna   \n",
+       "1833             IngaStinaGill    2021-02-01                 Jennifer   \n",
+       "1834               LeaWikstrom    2021-01-31                   Robert   \n",
+       "1835                MajaFjstad    2021-01-31                   Patrik   \n",
+       "1836          SolveigHedengran    2021-02-02                 Jennifer   \n",
+       "1837             SonjaLyttkens    2021-02-01                     Sten   \n",
+       "1838                ThyraBratt    2021-02-01                 Birgitta   \n",
+       "1839               YrsaStenius    2021-01-31                 Birgitta   \n",
        "\n",
-       "     article_author_lastname                      subtitle_sv name_lastname  \\\n",
-       "1673              Gustavsson  Lärare, rektor, rösträttskvinna      Wennberg   \n",
+       "     article_author_lastname                                  subtitle_sv  \\\n",
+       "1824               Tersmeden            Skådespelare, revyartist, sufflör   \n",
+       "1825                     Ney                       Journalist, författare   \n",
+       "1826                Mehrstam                         Konstnär, författare   \n",
+       "1827                Wistrand                Politisk journalist, feminist   \n",
+       "1828               Sandström            Filantrop, donator, museigrundare   \n",
+       "1829               Bergström                        Redaktör, förlagschef   \n",
+       "1830               Flensburg                               Konstnär, poet   \n",
+       "1831       Helgesson Kjellin  Missionär, sjukhusgrundare, psalmförfattare   \n",
+       "1832              Rosenqvist                       Textilkonstnär, lärare   \n",
+       "1833               Vintkvist                        Skådespelare, dansare   \n",
+       "1834                Pohjanen                                     Fotograf   \n",
+       "1835                  Steorn                   Textilkonstnär, träsnidare   \n",
+       "1836               Vintkvist                    Skådespelare, filmstjärna   \n",
+       "1837                 Kaijser      Matematiker, konstnär, kvinnosakskvinna   \n",
+       "1838                Wistrand                  Politiker, kvinnosakskvinna   \n",
+       "1839                Wistrand         Journalist, författare, chefredaktör   \n",
        "\n",
-       "      name_firstname      _merge  \n",
-       "1673  /Signe/ Helena  right_only  "
+       "         name_lastname             name_firstname      _merge  \n",
+       "1824          Hårleman        Amy Regina (/Nita/)  right_only  \n",
+       "1825          Sunesson             /Birgit/ Sofia  right_only  \n",
+       "1826  Hammar-Moeschlin               /Elsa/ Sofia  right_only  \n",
+       "1827       Svartengren               /Elsa/ Maria  right_only  \n",
+       "1828              Zorn              /Emma/ Amalia  right_only  \n",
+       "1829          Eriksson            Erna /Marianne/  right_only  \n",
+       "1830           Renberg          Gerda /Margareta/  right_only  \n",
+       "1831             Posse            /Hedvig/ Amalia  right_only  \n",
+       "1832           Dinclau          /Hildegard/ Maria  right_only  \n",
+       "1833              Gill               /Inga/ Stina  right_only  \n",
+       "1834          Wikström          /Lea/ Maria Adina  right_only  \n",
+       "1835           Fjæstad     Kerstin Maria (/Maja/)  right_only  \n",
+       "1836         Hedengran                  /Solveig/  right_only  \n",
+       "1837          Lyttkens       /Sonja/ Marie Louise  right_only  \n",
+       "1838             Bratt  /Thyra/ Augusta Elisabeth  right_only  \n",
+       "1839           Stenius              /Yrsa/ Carola  right_only  "
       ]
      },
      "execution_count": 16,
@@ -429,20 +631,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1 entries, 1673 to 1673\n",
+      "Int64Index: 16 entries, 1824 to 1839\n",
       "Data columns (total 8 columns):\n",
       " #   Column                    Non-Null Count  Dtype   \n",
       "---  ------                    --------------  -----   \n",
-      " 0   skblid                    1 non-null      object  \n",
-      " 1   publishedDate             1 non-null      object  \n",
-      " 2   article_author_firstname  1 non-null      object  \n",
-      " 3   article_author_lastname   1 non-null      object  \n",
-      " 4   subtitle_sv               1 non-null      object  \n",
-      " 5   name_lastname             1 non-null      object  \n",
-      " 6   name_firstname            1 non-null      object  \n",
-      " 7   _merge                    1 non-null      category\n",
+      " 0   skblid                    16 non-null     object  \n",
+      " 1   publishedDate             16 non-null     object  \n",
+      " 2   article_author_firstname  16 non-null     object  \n",
+      " 3   article_author_lastname   16 non-null     object  \n",
+      " 4   subtitle_sv               16 non-null     object  \n",
+      " 5   name_lastname             16 non-null     object  \n",
+      " 6   name_firstname            16 non-null     object  \n",
+      " 7   _merge                    16 non-null     category\n",
       "dtypes: category(1), object(7)\n",
-      "memory usage: 169.0+ bytes\n"
+      "memory usage: 1.1+ KB\n"
      ]
     }
    ],
@@ -459,7 +661,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1  antal poster\n"
+      "16  antal poster\n"
      ]
     }
    ],
@@ -534,7 +736,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-11-25 12:42:52.247521\n"
+      "Ended:  2021-02-02 18:29:29.365415\n"
      ]
     }
    ],
