--- a/Arken.ipynb
+++ b/Arken.ipynb
@@ -2266,7 +2266,7 @@
     "        divText = f.select(\"div\")\n",
     "        if len(h3) > 0:\n",
     "            if \"Taxonomi\" in h3[0].getText():\n",
-    "                print(\"\\tTaxonomi: \" + divText[0].getText().strip())\n",
+    "                #print(\"\\tTaxonomi: \" + divText[0].getText().strip())\n",
     "                Taxonomi = divText[0].getText().strip()\n",
     "    return True\n",
     "    \n",
