--- a/ISOF placenameservice.ipynb
+++ b/ISOF placenameservice.ipynb
@@ -7,7 +7,10 @@
     "# ISOF placenameservice\n",
     "* [this notebook](https://github.com/salgo60/open-data-examples/blob/master/ISOF%20placenameservice.ipynb) \n",
     "* see task [T267639](https://phabricator.wikimedia.org/T267639)\n",
-    "* [API placenameservice](https://placenameservice.isof.se/)\n"
+    "* [API placenameservice](https://placenameservice.isof.se/)\n",
+    " \n",
+    " \n",
+    "* [placename.isof.se](https://placename.isof.se/PlaceNamePublic/place-names) "
    ]
   },
   {
