--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Nobel API - check Wikidata and Nobel API\n",
-    "version. 0.42 added video and view statistics for Nobelweek 5-12 October 2020\n",
+    "version. 0.42 added video and view statistics for Nobelweek 5-12 October 2020 \n",
+    "\n",
+    "**New version of Notebook** supporting Nobel API 2.1 see [Nobel API_2_1.ipynb](https://github.com/salgo60/open-data-examples/blob/master/Nobel_API_2_1.ipynb)\n",
     "\n",
     "The purpose of this Notebook is to have Nobelprize winners in Wikidata in synch with the prizewinners at Nobelprize... lesson learned is that we also find vandalization in Wikidata....\n",
     "\n",
@@ -714,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
