--- a/Check WD kulturpersoner uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner uppsalakyrkogardar.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-23 22:56:02.119811\n"
+      "Last run:  2021-08-08 22:57:14.454986\n"
      ]
     }
    ],
@@ -154,40 +154,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Alfred Dahlgren</td>\n",
-       "      <td>alfred-dahlgren</td>\n",
+       "      <td>Ebba Boström</td>\n",
+       "      <td>ebba-bostrom</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Rosalie Olivecrona</td>\n",
-       "      <td>rosalie-olivecrona</td>\n",
+       "      <td>Carl Peter Thunberg</td>\n",
+       "      <td>carl-peter-thunberg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Hans Rosling</td>\n",
-       "      <td>hans-rosling</td>\n",
+       "      <td>Malla Silfverstolpe</td>\n",
+       "      <td>malla-silfverstolpe</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Emma Schenson</td>\n",
-       "      <td>emma-schenson</td>\n",
+       "      <td>Dag Hammarskjöld</td>\n",
+       "      <td>dag-hammarskjold</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Sonja Lyttkens</td>\n",
-       "      <td>sonja-lyttkens</td>\n",
+       "      <td>Vivi Täckholm</td>\n",
+       "      <td>vivi-tackholm</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       kulturgravname                href\n",
-       "0     Alfred Dahlgren     alfred-dahlgren\n",
-       "1  Rosalie Olivecrona  rosalie-olivecrona\n",
-       "2        Hans Rosling        hans-rosling\n",
-       "3       Emma Schenson       emma-schenson\n",
-       "4      Sonja Lyttkens      sonja-lyttkens"
+       "        kulturgravname                 href\n",
+       "0         Ebba Boström         ebba-bostrom\n",
+       "1  Carl Peter Thunberg  carl-peter-thunberg\n",
+       "2  Malla Silfverstolpe  malla-silfverstolpe\n",
+       "3     Dag Hammarskjöld     dag-hammarskjold\n",
+       "4        Vivi Täckholm        vivi-tackholm"
       ]
      },
      "execution_count": 4,
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -274,21 +274,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 121 entries, 0 to 120\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   person       121 non-null    object\n",
-      " 1   qid          121 non-null    object\n",
-      " 2   personLabel  121 non-null    object\n",
-      " 3   refURL       121 non-null    object\n",
-      " 4   href         121 non-null    object\n",
-      "dtypes: object(5)\n",
-      "memory usage: 4.9+ KB\n"
+      "RangeIndex: 123 entries, 0 to 122\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   person        123 non-null    object\n",
+      " 1   qid           123 non-null    object\n",
+      " 2   personLabel   123 non-null    object\n",
+      " 3   refURL        123 non-null    object\n",
+      " 4   href          123 non-null    object\n",
+      " 5   WD            123 non-null    object\n",
+      " 6   kulturperson  123 non-null    object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 6.9+ KB\n"
      ]
     }
    ],
    "source": [
+    "WDKulturGravar.to_csv(\"Check_WD_kulturpersoner_uppsalakyrkogardar.csv\")\n",
     "WDKulturGravar.info()"
    ]
   },
@@ -304,101 +307,101 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>personLabel</th>\n",
        "      <th>WD</th>\n",
        "      <th>kulturperson</th>\n",
+       "      <th>personLabel</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>Rutger Sernander</td>\n",
+       "      <th>108</th>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/rutger-sernander'>rutger-sernander</a></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>Sixtus Janson</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>108</th>\n",
-       "      <td>Sonja Lyttkens</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
+       "      <td>Rutger Sernander</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
-       "      <td>Svante Arrhenius</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
+       "      <td>Sixtus Janson</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
-       "      <td>Sven Anders Hägg</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
+       "      <td>Sonja Lyttkens</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>111</th>\n",
-       "      <td>Sven Lilja</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
+       "      <td>Svante Arrhenius</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
-       "      <td>Thekla Knös</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
+       "      <td>Sven Anders Hägg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
-       "      <td>Topper Martyn</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
+       "      <td>Sven Lilja</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
-       "      <td>Tycho Hedén</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
+       "      <td>Thekla Knös</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
-       "      <td>Ulla-Bella Fridh</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
+       "      <td>Topper Martyn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
-       "      <td>Uno von Troil</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
+       "      <td>Tycho Hedén</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
-       "      <td>Viktor Persson</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
+       "      <td>Ulla-Bella Fridh</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
-       "      <td>Vivi Laurent-Täckholm</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
+       "      <td>Uno von Troil</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td>Yngve Svalander</td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
+       "      <td>Viktor Persson</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
-       "      <td>Åke Holm</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
+       "      <td>Vivi Laurent-Täckholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
+       "      <td>Yngve Svalander</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
        "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ake-holm'>ake-holm</a></td>\n",
+       "      <td>Åke Holm</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -455,7 +458,8 @@
     {
      "data": {
       "text/plain": [
-       "both    130\n",
+       "both             129\n",
+       "Wikidata_only      2\n",
        "Name: Kulturgravar_Wikidata, dtype: int64"
       ]
      },
@@ -513,14 +517,58 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q1960724</td>\n",
+       "      <td>Q1960724</td>\n",
+       "      <td>Hans Järta</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/w...</td>\n",
+       "      <td>wp-contentuploadsfilm0102-HJ.mp4</td>\n",
+       "      <td>&lt;a href='http://www.wikidata.org/entity/Q19607...</td>\n",
+       "      <td>&lt;a href='https://kulturpersoner.uppsalakyrkoga...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wikidata_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q6159106</td>\n",
+       "      <td>Q6159106</td>\n",
+       "      <td>Henri Osti</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/w...</td>\n",
+       "      <td>wp-contentuploadsfilm0103-HO.mp4</td>\n",
+       "      <td>&lt;a href='http://www.wikidata.org/entity/Q61591...</td>\n",
+       "      <td>&lt;a href='https://kulturpersoner.uppsalakyrkoga...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wikidata_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [person, qid, personLabel, refURL, href, WD, kulturperson, kulturgravname, Kulturgravar_Wikidata]\n",
-       "Index: []"
+       "                                     person       qid personLabel  \\\n",
+       "58  http://www.wikidata.org/entity/Q1960724  Q1960724  Hans Järta   \n",
+       "62  http://www.wikidata.org/entity/Q6159106  Q6159106  Henri Osti   \n",
+       "\n",
+       "                                               refURL  \\\n",
+       "58  https://kulturpersoner.uppsalakyrkogardar.se/w...   \n",
+       "62  https://kulturpersoner.uppsalakyrkogardar.se/w...   \n",
+       "\n",
+       "                                href  \\\n",
+       "58  wp-contentuploadsfilm0102-HJ.mp4   \n",
+       "62  wp-contentuploadsfilm0103-HO.mp4   \n",
+       "\n",
+       "                                                   WD  \\\n",
+       "58  <a href='http://www.wikidata.org/entity/Q19607...   \n",
+       "62  <a href='http://www.wikidata.org/entity/Q61591...   \n",
+       "\n",
+       "                                         kulturperson kulturgravname  \\\n",
+       "58  <a href='https://kulturpersoner.uppsalakyrkoga...            NaN   \n",
+       "62  <a href='https://kulturpersoner.uppsalakyrkoga...            NaN   \n",
+       "\n",
+       "   Kulturgravar_Wikidata  \n",
+       "58         Wikidata_only  \n",
+       "62         Wikidata_only  "
       ]
      },
      "execution_count": 11,
@@ -541,7 +589,9 @@
     {
      "data": {
       "text/plain": [
-       "Series([], Name: refURL, dtype: object)"
+       "58    https://kulturpersoner.uppsalakyrkogardar.se/w...\n",
+       "62    https://kulturpersoner.uppsalakyrkogardar.se/w...\n",
+       "Name: refURL, dtype: object"
       ]
      },
      "execution_count": 12,
@@ -658,8 +708,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-23 22:56:08.559901\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:06.440451\n"
+      "Ended:  2021-08-08 22:57:25.984942\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:11.531385\n"
      ]
     }
    ],
@@ -686,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
