--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -7,7 +7,7 @@
     "# Nobel API - check Wikidata and Nobel API\n",
     "version. 0.42 added video and view statistics for Nobelweek 5-12 October 2020 \n",
     "\n",
-    "**New version of Notebook** supporting Nobel API 2.1 see [Nobel API_2_1.ipynb](https://github.com/salgo60/open-data-examples/blob/master/Nobel_API_2_1.ipynb)\n",
+    "**New version of Notebook** supporting Nobel API 2.1 see [Nobel API_2_1.ipynb](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API_2_1.ipynb)\n",
     "\n",
     "The purpose of this Notebook is to have Nobelprize winners in Wikidata in synch with the prizewinners at Nobelprize... lesson learned is that we also find vandalization in Wikidata....\n",
     "\n",
