--- a/Nobel API_2_1.ipynb
+++ b/Nobel API_2_1.ipynb
@@ -26,7 +26,8 @@
     "* 0.1 use API 2.1 --> Nobel API also includes Wikidata Q numbers\n",
     "##### See also\n",
     "* Kaggle [nobelfoundation/nobel-laureates](https://www.kaggle.com/nobelfoundation/nobel-laureates) and my [Kaggle Notebook](https://www.kaggle.com/magnusslg/wikidata-nobelprize-synch)\n",
-    "      \n",
+    "* [Wikidata mismatchfinder](https://github.com/wmde/wikidata-mismatch-finder/issues/57) about how we should work with mismatches with e.g. Nobelprize\n",
+    "\n",
     "#### Other sources we sync\n",
     "* Famous people on Uppsala old cemetery [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Check%20WD%20kulturpersoner%20uppsalakyrkogardar.ipynb)\n",
     "* Swedish Literature Bank - [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb) \n",
