--- a/Check WD kulturpersoner uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner uppsalakyrkogardar.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2021-08-08 22:57:14.454986\n"
+      "Last run:  2021-08-14 23:46:39.455179\n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
     "\n",
     "endpoint_url = \"https://query.wikidata.org/sparql\"\n",
     "\n",
-    "# https://w.wiki/crt\n",
+    "# https://w.wiki/3teL\n",
     "\n",
     "query = \"\"\"select ?person (REPLACE(STR(?person),\".*Q\",\"Q\") AS ?qid) ?personLabel ?refURL ?href\n",
     "{\n",
@@ -234,6 +234,7 @@
     "   BIND(REPLACE(REPLACE(str(?refURL), \"https://kulturpersoner.uppsalakyrkogardar.se/\", \"\"),\"/\",\"\") AS ?href)\n",
     " \n",
     "   SERVICE wikibase:label { bd:serviceParam wikibase:language \"sv\"}\n",
+    "   Filter(!CONTAINS(str(?refURL),\".mp4\") ) # some links to mp4\n",
     "}\n",
     "Order by ?personLabel\n",
     "\"\"\"\n",
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,19 +275,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 123 entries, 0 to 122\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column        Non-Null Count  Dtype \n",
-      "---  ------        --------------  ----- \n",
-      " 0   person        123 non-null    object\n",
-      " 1   qid           123 non-null    object\n",
-      " 2   personLabel   123 non-null    object\n",
-      " 3   refURL        123 non-null    object\n",
-      " 4   href          123 non-null    object\n",
-      " 5   WD            123 non-null    object\n",
-      " 6   kulturperson  123 non-null    object\n",
-      "dtypes: object(7)\n",
-      "memory usage: 6.9+ KB\n"
+      "RangeIndex: 121 entries, 0 to 120\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   person       121 non-null    object\n",
+      " 1   qid          121 non-null    object\n",
+      " 2   personLabel  121 non-null    object\n",
+      " 3   refURL       121 non-null    object\n",
+      " 4   href         121 non-null    object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 4.9+ KB\n"
      ]
     }
    ],
@@ -308,100 +307,100 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>WD</th>\n",
-       "      <th>kulturperson</th>\n",
        "      <th>personLabel</th>\n",
+       "      <th>kulturperson</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>108</th>\n",
+       "      <th>106</th>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q919826#P119'>WD Q919826</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/rutger-sernander'>rutger-sernander</a></td>\n",
        "      <td>Rutger Sernander</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/rutger-sernander'>rutger-sernander</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
+       "      <td>Sixtus Janson</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
+       "      <td>Sonja Lyttkens</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q38772992#P119'>WD Q38772992</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sixtus-janson'>sixtus-janson</a></td>\n",
-       "      <td>Sixtus Janson</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
+       "      <td>Svante Arrhenius</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q19844789#P119'>WD Q19844789</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sonja-lyttkens'>sonja-lyttkens</a></td>\n",
-       "      <td>Sonja Lyttkens</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
+       "      <td>Sven Anders Hägg</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>111</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q80956#P119'>WD Q80956</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/svante-arrhenius'>svante-arrhenius</a></td>\n",
-       "      <td>Svante Arrhenius</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
+       "      <td>Sven Lilja</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q99485352#P119'>WD Q99485352</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-anders-hagg'>sven-anders-hagg</a></td>\n",
-       "      <td>Sven Anders Hägg</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
+       "      <td>Thekla Knös</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5951505#P119'>WD Q5951505</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/sven-lilja'>sven-lilja</a></td>\n",
-       "      <td>Sven Lilja</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
+       "      <td>Topper Martyn</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4959294#P119'>WD Q4959294</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/thekla-knos'>thekla-knos</a></td>\n",
-       "      <td>Thekla Knös</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
+       "      <td>Tycho Hedén</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5978552#P119'>WD Q5978552</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/topper-martyn'>topper-martyn</a></td>\n",
-       "      <td>Topper Martyn</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
+       "      <td>Ulla-Bella Fridh</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>116</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5795469#P119'>WD Q5795469</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/tycho-heden'>tycho-heden</a></td>\n",
-       "      <td>Tycho Hedén</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
+       "      <td>Uno von Troil</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4948950#P119'>WD Q4948950</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ulla-bella-fridh-gabrielsson'>ulla-bella-fridh-gabrielsson</a></td>\n",
-       "      <td>Ulla-Bella Fridh</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
+       "      <td>Viktor Persson</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>118</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q943803#P119'>WD Q943803</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/uno-von-troil'>uno-von-troil</a></td>\n",
-       "      <td>Uno von Troil</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
+       "      <td>Vivi Laurent-Täckholm</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6043915#P119'>WD Q6043915</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/viktor-persson'>viktor-persson</a></td>\n",
-       "      <td>Viktor Persson</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
+       "      <td>Yngve Svalander</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q4983741#P119'>WD Q4983741</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/vivi-tackholm'>vivi-tackholm</a></td>\n",
-       "      <td>Vivi Laurent-Täckholm</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121</th>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q6197251#P119'>WD Q6197251</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/yngve-svalander'>yngve-svalander</a></td>\n",
-       "      <td>Yngve Svalander</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q13390628#P119'>WD Q13390628</a></td>\n",
-       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ake-holm'>ake-holm</a></td>\n",
        "      <td>Åke Holm</td>\n",
+       "      <td><a href='https://kulturpersoner.uppsalakyrkogardar.se/ake-holm'>ake-holm</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -458,8 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "both             129\n",
-       "Wikidata_only      2\n",
+       "both    129\n",
        "Name: Kulturgravar_Wikidata, dtype: int64"
       ]
      },
@@ -486,89 +484,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person</th>\n",
-       "      <th>qid</th>\n",
-       "      <th>personLabel</th>\n",
-       "      <th>refURL</th>\n",
-       "      <th>href</th>\n",
-       "      <th>WD</th>\n",
-       "      <th>kulturperson</th>\n",
-       "      <th>kulturgravname</th>\n",
-       "      <th>Kulturgravar_Wikidata</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q1960724</td>\n",
-       "      <td>Q1960724</td>\n",
-       "      <td>Hans Järta</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/w...</td>\n",
-       "      <td>wp-contentuploadsfilm0102-HJ.mp4</td>\n",
-       "      <td>&lt;a href='http://www.wikidata.org/entity/Q19607...</td>\n",
-       "      <td>&lt;a href='https://kulturpersoner.uppsalakyrkoga...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Wikidata_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q6159106</td>\n",
-       "      <td>Q6159106</td>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/w...</td>\n",
-       "      <td>wp-contentuploadsfilm0103-HO.mp4</td>\n",
-       "      <td>&lt;a href='http://www.wikidata.org/entity/Q61591...</td>\n",
-       "      <td>&lt;a href='https://kulturpersoner.uppsalakyrkoga...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Wikidata_only</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                     person       qid personLabel  \\\n",
-       "58  http://www.wikidata.org/entity/Q1960724  Q1960724  Hans Järta   \n",
-       "62  http://www.wikidata.org/entity/Q6159106  Q6159106  Henri Osti   \n",
-       "\n",
-       "                                               refURL  \\\n",
-       "58  https://kulturpersoner.uppsalakyrkogardar.se/w...   \n",
-       "62  https://kulturpersoner.uppsalakyrkogardar.se/w...   \n",
-       "\n",
-       "                                href  \\\n",
-       "58  wp-contentuploadsfilm0102-HJ.mp4   \n",
-       "62  wp-contentuploadsfilm0103-HO.mp4   \n",
-       "\n",
-       "                                                   WD  \\\n",
-       "58  <a href='http://www.wikidata.org/entity/Q19607...   \n",
-       "62  <a href='http://www.wikidata.org/entity/Q61591...   \n",
-       "\n",
-       "                                         kulturperson kulturgravname  \\\n",
-       "58  <a href='https://kulturpersoner.uppsalakyrkoga...            NaN   \n",
-       "62  <a href='https://kulturpersoner.uppsalakyrkoga...            NaN   \n",
-       "\n",
-       "   Kulturgravar_Wikidata  \n",
-       "58         Wikidata_only  \n",
-       "62         Wikidata_only  "
+       "0"
       ]
      },
      "execution_count": 11,
@@ -578,7 +495,7 @@
    ],
    "source": [
     "KulturgravarNotBoth = dfmerge[~(dfmerge[\"Kulturgravar_Wikidata\"] == \"both\")].copy() \n",
-    "KulturgravarNotBoth\n"
+    "KulturgravarNotBoth.shape[0]\n"
    ]
   },
   {
@@ -589,9 +506,7 @@
     {
      "data": {
       "text/plain": [
-       "58    https://kulturpersoner.uppsalakyrkogardar.se/w...\n",
-       "62    https://kulturpersoner.uppsalakyrkogardar.se/w...\n",
-       "Name: refURL, dtype: object"
+       "Series([], Name: refURL, dtype: object)"
       ]
      },
      "execution_count": 12,
@@ -708,8 +623,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2021-08-08 22:57:25.984942\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:11.531385\n"
+      "Ended:  2021-08-14 23:46:49.894676\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:10.440216\n"
      ]
     }
    ],
