--- a/RiksdagsvoteringGetLinks.ipynb
+++ b/RiksdagsvoteringGetLinks.ipynb
@@ -5,10 +5,14 @@
    "id": "103b357a",
    "metadata": {},
    "source": [
-    "Get Links from a page and check if they are a Swedish MP person   \n",
+    "Get Links from a page in svWikipedia and check if they are a Swedish MP person   \n",
     "\n",
     "* known limits\n",
-    "  * just get 500 links"
+    "  * just get 500 links\n",
+    "  \n",
+    "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/RiksdagsvoteringGetLinks.ipynb)\n",
+    "\n",
+    "version 1"
    ]
   },
   {
@@ -33,29 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "id": "5fd2d12f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://sv.wikipedia.org/w/api.php?action=query&format=json&prop=links&meta=&pllimit=500&titles=\" \n",
+    "svWikipediaAPIurl = \"https://sv.wikipedia.org/w/api.php?action=query&format=json&prop=links&meta=&pllimit=500&titles=\" \n",
     "pagetoCheck = \"Användare:Salgo60/sandlåda\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "id": "47120cd6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.core.display import display, HTML\n",
-    "urlcheck = url + pagetoCheck"
+    "urlcheck = svWikipediaAPIurl + pagetoCheck"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "id": "3cee5ff6",
    "metadata": {},
    "outputs": [
