--- a/RiksdagsvoteringGetLinks.ipynb
+++ b/RiksdagsvoteringGetLinks.ipynb
@@ -5,7 +5,7 @@
    "id": "103b357a",
    "metadata": {},
    "source": [
-    "Get Links from a page in svWikipedia and check if they are a Swedish MP person   \n",
+    "### Get Links from a page in svWikipedia and check if they are a Swedish MP person   \n",
     "\n",
     "* known limits\n",
     "  * just get 500 links\n",
@@ -48,25 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "id": "47120cd6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.core.display import display, HTML\n",
-    "urlcheck = svWikipediaAPIurl + pagetoCheck"
+    "urlcheck = svWikipediaAPIurl + pagetoCheck\n",
+    "urlArticle = \"https://sv.wikipedia.org/wiki/\" + pagetoCheck\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "id": "3cee5ff6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "API url <a href=https://sv.wikipedia.org/w/api.php?action=query&format=json&prop=links&meta=&pllimit=500&titles=Användare:Salgo60/sandlåda>https://sv.wikipedia.org/w/api.php?action=query&format=json&prop=links&meta=&pllimit=500&titles=Användare:Salgo60/sandlåda</a>"
+       "URL sida <a href=https://sv.wikipedia.org/wiki/Användare:Salgo60/sandlåda>Användare:Salgo60/sandlåda</a><br>* API url <a href=https://sv.wikipedia.org/w/api.php?action=query&format=json&prop=links&meta=&pllimit=500&titles=Användare:Salgo60/sandlåda>https://sv.wikipedia.org/w/api.php?action=query&format=json&prop=links&meta=&pllimit=500&titles=Användare:Salgo60/sandlåda</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -77,7 +78,7 @@
     }
    ],
    "source": [
-    "display(HTML(\"API url <a href=\" + urlcheck +\">\" + urlcheck + \"</a>\"))"
+    "display(HTML(\"URL sida <a href=\" + urlArticle + \">\" + pagetoCheck +  \"</a><br>* API url <a href=\" + urlcheck +\">\" + urlcheck + \"</a>\"))"
    ]
   },
   {
