--- a/RiksdagsvoteringGetLinks.ipynb
+++ b/RiksdagsvoteringGetLinks.ipynb
@@ -5,19 +5,24 @@
    "id": "103b357a",
    "metadata": {},
    "source": [
-    "### Get Links from a page in svWikipedia and check if they are a Swedish MP person   \n",
+    "### Get Links from a page on svWikipedia and check if the link is to a Swedish MP person   \n",
     "\n",
-    "* known limits\n",
-    "  * just get 500 links\n",
     "  \n",
     "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/RiksdagsvoteringGetLinks.ipynb)\n",
+    "  * Wikipedia [discussion related to this exercise](https://sv.wikipedia.org/wiki/Diskussion:Regeringen_Andersson#en_Wikipedia_har_med_vilka_som_r%C3%B6star_p%C3%A5_vad_borde_finnas_i_sv:Wikipedia)\n",
     "\n",
-    "version 1"
+    "version 1 \n",
+    "* known limits\n",
+    "  * just get 500 links\n",
+    "\n",
+    "TODO\n",
+    "* get the voting data as data from [Riksdagens Öppna data](https://data.riksdagen.se/) and check that we have done our home work correct reading scanned [PDF](https://www.riksdagen.se/globalassets/01.-aktuellt/202021/srv5-10-mpc21112410220.pdf)\n",
+    "* maybe generate the Wiki syntax direct from the voting data, could maybe be used for other voting in Riksdagen that has a Wikipedia article...."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "id": "b0298836",
    "metadata": {},
    "outputs": [
@@ -25,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2021-12-03 02:33:59.822058\n"
+      "Last run:  2021-12-03 03:14:46.779622\n"
      ]
     }
    ],
