--- a/RiksdagsvoteringGetLinks.ipynb
+++ b/RiksdagsvoteringGetLinks.ipynb
@@ -10,6 +10,7 @@
     "  \n",
     "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/RiksdagsvoteringGetLinks.ipynb)\n",
     "  * Wikipedia [discussion related to this exercise](https://sv.wikipedia.org/wiki/Diskussion:Regeringen_Andersson#en_Wikipedia_har_med_vilka_som_r%C3%B6star_p%C3%A5_vad_borde_finnas_i_sv:Wikipedia)\n",
+    "  * API documentation [query](https://www.mediawiki.org/w/api.php?action=help&modules=query%2Blinks)\n",
     "\n",
     "version 1 \n",
     "* known limits\n",
