--- a/RiksdagsvoteringGetLinks.ipynb
+++ b/RiksdagsvoteringGetLinks.ipynb
@@ -18,8 +18,8 @@
     "* if more links to the same page is in the article it looks like we just get one item\n",
     "  * as we have two votes --> \n",
     "     * we get 117 + 174+57 = 348 from the [first vote](https://www.riksdagen.se/globalassets/01.-aktuellt/202021/srv5-10-mpc21112410220.pdf)\n",
-    "     * second vote --> 101+173+75 = 349\n",
-    "  * links in article to MPs will be unique members in vote one and two below we have 340 --> **I guess its wrong**\n",
+    "     * [second vote](https://www.riksdagen.se/sv/aktuellt/2021/nov/29/magdalena-andersson-godkandes-som-statsminister/) --> 101+173+75 = 349\n",
+    "  * links in article to MPs will be unique members in vote one and two below we have **340** --> **I guess its wrong** in this code or in the page\n",
     "\n",
     "\n",
     "TODO\n",
